@@ -803,6 +803,11 @@ bool Security::DecryptMessage
 
 		return false;
 	}
+	if (_length < 19) {
+		Log::Write(LogLevel_Warning, GetNodeId(), "Recieved a Encrypted Message that is too Short. Dropping it");
+		return false;
+	}
+
 
 	uint8 iv[17];
 	createIVFromPacket_inbound(_data, iv); /* first 8 bytes of Packet are the Random Value generated by the Device
